<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="@android:dimen/app_icon_size">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/lastName" />

                <TextView
                    android:id="@+id/tvSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/surName" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/phoneNumber" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:cardCornerRadius="@android:dimen/app_icon_size">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/experience" />

                <TextView
                    android:id="@+id/tvSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/salary" />

                <TextView
                    android:id="@+id/tvPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/position" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="@android:dimen/app_icon_size">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvConnectedServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/connectedServices" />

                <TextView
                    android:id="@+id/tvAwaitingServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/awaitingServices" />

                <TextView
                    android:id="@+id/tvConnectedInternet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/connectedInternet" />

                <TextView
                    android:id="@+id/tvConnectedTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/connectedTV" />

                <TextView
                    android:id="@+id/tvConnectedSimCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/connectedSimCard" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>